<resources>
    <string name="app_name">Pacify</string>
    <string name="output_hint">
        Please place your finger on the device\'s camera, covering the flash as well. After
        10 seconds, you can export the results through the menu.
        \n\nThis utility works by measuring the amount of red it sees through the camera, and
        attempting to detect the fluctuations.
        \nIt works better in a darkened room, and when the pressure on the camera is constant.
        \nIf there are multiple cameras on your device, make sure that your finger covers the entire
        field of view in the small viewfinder.
        \nOnce the measurement is complete, it can be exported or repeated through the menu.
    </string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="simpleDateFormat">dd-MM-yyyy HH:mm:ss</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <string name="camera_not_found">Camera not available.</string>
    <string name="stored_results">Stored Results</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="finger">Please Place Your Finger On The Camera</string>
    <string name="pss">Perceived Stress Scale</string>
    <string name="Q1">l. In the last month, how often have you been upset because of something that happened unexpectedly?</string>
    <string name="Q2">2. In the last month, how often have you felt that you were unable to control the important things in your life?</string>
    <string name="Q3">3. In the last month, how often have you felt nervous and stressed?</string>
    <string name="Q4">4. In the last month, how often have you felt confident about your ability to handle your personal problems?</string>
    <string name="Q5">5. In the last month, how often have you felt that things were going your way?</string>
    <string name="Q6">6. In the last month, how often have you found that you could not cope with all the things that you had to do?</string>
    <string name="Q7">7. In the last month, how often have you been able to control irritations in your life?</string>
    <string name="Q8">8. In the last month, how often have you felt that you were on top of things?</string>
    <string name="Q9">9. In the last month, how often have you been angered because of things that happened that were outside of your control?</string>
    <string name="Q10">10. In the last month, how often have you felt difficulties were piling up so high that you could not overcome them?</string>
    <string name="stress_score">Your Stress Score Is:</string>
    <string name="upload">Upload Results</string>
    <string-array name="answers">
        <item> Never </item>
        <item> Almost Never </item>
        <item> Sometimes </item>
        <item> Fairly Often </item>
        <item> Very Often </item>
    </string-array>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>

    <plurals name="stressScore_output_template">
        <item quantity="zero">HRV: %2.1f bpm</item>
        <item quantity="one">HRV: %2.1f bpm</item>
        <item quantity="other">HRV: %2.1f bpm</item>
    </plurals>
</resources>
