<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:focusable="auto"
    tools:context=".PSSActivity"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".PSSActivity"
    >

    <ScrollView
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toTopOf="@id/bottom_nav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pss"
                android:textSize="35sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q1"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:outlineAmbientShadowColor="@color/grey"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q2"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q3"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q4"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q5"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q6"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q7"
                android:textSize="20sp"
                android:textAlignment="center"
                />


            <Spinner
                android:id="@+id/spin7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q8"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q9"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <Spinner
                android:id="@+id/spin9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Q10"
                android:textSize="20sp"
                android:textAlignment="center"
                />


            <Spinner
                android:id="@+id/spin10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />


            <!--Button For Score-->
            <Button
                android:id="@+id/total_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="Submit Results"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@color/black"
        app:itemIconTint="#fff"
        app:itemTextColor="#fff"
        app:menu="@menu/bottom_nav"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>