<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:focusable="auto"
    tools:context=".CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".CameraActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/outputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/graphTextureView"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/finger"
            android:textAlignment="center"
            android:textSize="30sp"
            />
        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/outputView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/outputView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="30sp"/>
            </LinearLayout>
        </ScrollView>

        <TextureView
            android:id="@+id/graphTextureView"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextureView
            android:id="@+id/textureView2"
            android:layout_width="@dimen/camera_view_width"
            android:layout_height="@dimen/camera_view_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textureView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/graphTextureView" />

        <!--android:ellipsize="marquee"-->
        <!--android:gravity="center_vertical"
       android:textAlignment="gravity"
                   android:layout_marginStart="@dimen/camera_view_height"-->

        <ScrollView
            android:id="@+id/scrollview_direction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/camera_view_height"
            android:layout_marginEnd="@dimen/camera_view_height"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--   <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"/>
                    android:hint="@string/output_hint"-->
                <!--   android:importantForAutofill="no"
                    android:inputType="none" -->
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:contentDescription="@string/new_measurement"
            android:focusable="true"
            android:onClick="onClickNewMeasurement"
            android:src="@drawable/ic_baseline_add_24"
            android:visibility="invisible"
            app:backgroundTint="@color/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:itemBackground="@color/black"
            app:itemIconTint="#fff"
            app:itemTextColor="#fff"
            app:menu="@menu/bottom_nav"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>